Added default starter fieldsets

--- a/export/resources/css/site.css
+++ b/export/resources/css/site.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
-@plugin "@tailwindcss/typography";
+@import "./prose";
+
 @source "../views";
 @source "../../content";
+
+@plugin "@tailwindcss/typography";
